[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/tools/graph_panels/terminal_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/tools/GraphNode.gd" type="Script" id=2]
[ext_resource path="res://scenes/tools/linux_console.tscn" type="PackedScene" id=3]

[node name="graphnode" type="GraphNode"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 200.0
margin_top = 39.0
margin_right = 668.0
margin_bottom = 383.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 1
mouse_filter = 1
mouse_default_cursor_shape = 13
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.5
theme = ExtResource( 1 )
custom_constants/port_offset = -5
custom_constants/separation = -10
title = "  Graphnode"
offset = Vector2( 0, 0 )
show_close = true
resizable = true
selected = false
comment = false
overlay = 0
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0.67451, 0.215686, 0.215686, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 0, 0.694118, 0.305882, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "0", "1", "Material", "Mouse", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles", "custom_styles/defaultframe", "custom_styles/frame" ]

[node name="panel" parent="." instance=ExtResource( 3 )]
self_modulate = Color( 0.32549, 0.32549, 0.32549, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 8.0
margin_right = 467.0
margin_bottom = 350.0
rect_min_size = Vector2( 466, 342 )
mouse_filter = 1
_sections_unfolded = [ "Focus", "Grow Direction", "Hint", "Margin", "Mouse", "Rect", "Size Flags", "Theme", "Visibility", "custom_constants", "theme" ]

[node name="execute" type="Button" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 350.0
margin_right = 467.0
margin_bottom = 369.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Execute Task"
flat = false
align = 1

[connection signal="close_request" from="." to="." method="_on_GraphNode_close_request"]
[connection signal="raise_request" from="." to="." method="_on_GraphNode_raise_request"]
[connection signal="resize_request" from="." to="." method="_on_GraphNode_resize_request"]
[connection signal="button_up" from="execute" to="." method="_on_execute_button_up"]
[connection signal="pressed" from="execute" to="." method="_on_execute_pressed"]
